# oracle-ibc

./: Cargo.toml  DeploymentGuide.md  README.md
band_oracle/: CoinGecko.py  CoinMarketCap.py  deployment_guide.md  request_data.sh  setup_data_script.sh  setup_oracle_script.sh  setup_val_rep.sh  startnode.sh  yoda_setup.sh
band_oracle/Band_Standard_Dataset/: Cargo.toml
band_oracle/Band_Standard_Dataset/src/: logic.rs
contracts/cw-band/: Cargo.toml  README.md
contracts/cw-band/examples/: schema.rs
contracts/cw-band/src/: contract.rs  ibc.rs  msg.rs  test_helpers.rs
