[package]
name = "cw-band"
version = "0.10.3"
authors = ["Vuong <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "IBC Enabled query band oracle data"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw0 = { path = "../../packages/cw0", version = "0.10.3" }
cw2 = { path = "../../packages/cw2", version = "0.10.3" }
cw20 = { path = "../../packages/cw20", version = "0.10.3" }
cosmwasm-std = { version = "1.0.0-beta", features = ["stargate"] }
hex = "0.4.3"
cw-storage-plus = { path = "../../packages/storage-plus", version = "0.10.3" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
[dev-dependencies]
cosmwasm-schema = { version = "0.16.3" }
